# MiniDP

./: .gitignore  LICENSE  README.md  pyproject.toml
cli/: __init__.py  minidp.py
docs/: cli.md  configuration.md  processors.md
examples/: demo_recipe.json
examples/data/: input.jsonl
minidp/: __init__.py  errors.py  manifest.py  parallel.py  processors_base.py  recipe.py  recipe_builder.py  registry.py  runner.py  types.py
minidp/custom_processors/: __init__.py  add_prefix_processor.py  custom_processors_registry.jsonl  text_uppercase_processor.py
minidp/processors/: __init__.py  common.py  processors_registry.jsonl
